iac/k8s/alb-demo/nginx-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    eks.amazonaws.com/fargate-profile: fp-default
    run: nginx
  name: nginx-service
  namespace: "default"
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    eks.amazonaws.com/fargate-profile: fp-default
    run: nginx
  type: NodePort
status:
  loadBalancer: {}
