iac/k8s/alb-demo/nginx-service-bkp.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"alb.ingress.kubernetes.io/target-type":"ip"},"name":"nginx-service","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"nginx"},"type":"NodePort"}}
  creationTimestamp: "2021-08-21T15:54:40Z"
  name: nginx-service
  namespace: default
  resourceVersion: "7181"
  uid: b29645ea-36b0-4f74-9c8a-287c41b56fad
spec:
  clusterIP: 10.100.180.50
  clusterIPs:
  - 10.100.180.50
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30903
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
